# alexos-watchtower

./: ALEXOS_WATCHTOWER_DEPLOYMENT_REFERENCE.md  ALEXOS_WATCHTOWER_INTEGRATION.md  CHAINBOT_WATCHTOWER_INTEGRATION.md  COMPLETE_INTEGRATION_SUMMARY.md  DASHBOARD_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  ENTERPRISE_AUDIT_REPORT.md  FORENSIC_FEATURES_README.md  LICENSE  README.md  SECURITY_CHECKLIST.md  UPDATED_INTEGRATION_ARCHITECTURE.md  WATCHTOWER_OFFICIAL_INFO.md  alembic.ini  alexos_module_watchtower.yaml  check_tables.py  deploy_watchtower_pi.sh  docker-compose.yml  integration_test_results.json  main.py  pyproject.toml  requirements.txt  test_alexos_integration.py  test_auth.py  test_chainbot_integration.py  test_env.py  watchtower.service
alexos_integration/: INTEGRATION_SUMMARY.md  README.md  test_integration.py
api/: __init__.py  agents.py  audit.py  auth.py  events.py  forensic.py  status.py
artifact/: __init__.py  hooks.py  manager.py  nft.py  swap.py
auth/: __init__.py  keys.py  onchain.py  rbac.py  session.py  session_fusion.py  zkp.py
backup/: enterprise_backup.py
blockchain/: __init__.py  evm.py  hooks.py  polkadot.py  proof.py  solana.py  token.py
compliance/: __init__.py  enterprise_audit.py  graphql.py  grcp.py  hooks.py  siem.py  webhook.py
config/: __init__.py  env.py  logging.py  plugins.py  secrets.py  settings.py
dashboard/: __init__.py  api.py  perf_panel.py  websocket.py
database/: __init__.py  engine.py  sharding.py
devops/: Dockerfile  docker-compose.yml  docker-compose.yml.v1  entrypoint.sh  k8s.yaml  (+2 more)
(+161 files in other folders)
